; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_configfiles.c_needs_config_quoting.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_configfiles.c_needs_config_quoting.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @needs_config_quoting to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @needs_config_quoting(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8, align 1
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 0
  %8 = load i8, i8* %7, align 1
  %9 = sext i8 %8 to i32
  %10 = icmp eq i32 %9, 37
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %51

12:                                               ; preds = %1
  store i32 0, i32* %4, align 4
  br label %13

13:                                               ; preds = %47, %12
  %14 = load i8*, i8** %3, align 8
  %15 = load i32, i32* %4, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8, i8* %14, i64 %16
  %18 = load i8, i8* %17, align 1
  %19 = icmp ne i8 %18, 0
  br i1 %19, label %20, label %50

20:                                               ; preds = %13
  %21 = load i8*, i8** %3, align 8
  %22 = load i32, i32* %4, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8, i8* %21, i64 %23
  %25 = load i8, i8* %24, align 1
  store i8 %25, i8* %5, align 1
  %26 = load i8, i8* %5, align 1
  %27 = call i32 @mp_isprint(i8 zeroext %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %45

29:                                               ; preds = %20
  %30 = load i8, i8* %5, align 1
  %31 = call i64 @mp_isspace(i8 zeroext %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %45, label %33

33:                                               ; preds = %29
  %34 = load i8, i8* %5, align 1
  %35 = zext i8 %34 to i32
  %36 = icmp eq i32 %35, 35
  br i1 %36, label %45, label %37

37:                                               ; preds = %33
  %38 = load i8, i8* %5, align 1
  %39 = zext i8 %38 to i32
  %40 = icmp eq i32 %39, 39
  br i1 %40, label %45, label %41

41:                                               ; preds = %37
  %42 = load i8, i8* %5, align 1
  %43 = zext i8 %42 to i32
  %44 = icmp eq i32 %43, 34
  br i1 %44, label %45, label %46

45:                                               ; preds = %41, %37, %33, %29, %20
  store i32 1, i32* %2, align 4
  br label %51

46:                                               ; preds = %41
  br label %47

47:                                               ; preds = %46
  %48 = load i32, i32* %4, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %4, align 4
  br label %13

50:                                               ; preds = %13
  store i32 0, i32* %2, align 4
  br label %51

51:                                               ; preds = %50, %45, %11
  %52 = load i32, i32* %2, align 4
  ret i32 %52
}

declare dso_local i32 @mp_isprint(i8 zeroext) #1

declare dso_local i64 @mp_isspace(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
